force-app/main/default/objects/Closing__c/fields/Percentage_of_Medicaid_Claim_Paid__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_Medicaid_Claim_Paid__c</fullName>
    <formula>IF(
   OR(
       ISBLANK(Medicaid_Amount_Paid__c),
       Medicaid_Claim_Amount__c = 0
     ), 0,
     Medicaid_Amount_Paid__c / Medicaid_Claim_Amount__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage of Medicaid Claim Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>