force-app/main/default/objects/Closing__c/fields/Primary_Rep_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_First_Name__c</fullName>
    <formula>Trust__r.Primary_Representative_Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Rep First Name</label>
    <type>Text</type>
</CustomField>