force-app/main/default/objects/Closing__c/fields/Primary_Rep_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_Last_Name__c</fullName>
    <formula>Trust__r.Primary_Representative_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Rep Last Name</label>
    <type>Text</type>
</CustomField>