force-app/main/default/objects/Closing__c/fields/Primary_Rep_Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_Mailing_City__c</fullName>
    <formula>Trust__r.Primary_Representative_Contact__r.MailingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Rep Mailing City</label>
    <type>Text</type>
</CustomField>