force-app/main/default/objects/Closing__c/fields/Primary_Rep_Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_Mailing_State__c</fullName>
    <formula>Trust__r.Primary_Representative_Contact__r.MailingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Rep Mailing State</label>
    <type>Text</type>
</CustomField>