force-app/main/default/objects/Closing__c/fields/Primary_Rep_Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_Mailing_Street__c</fullName>
    <formula>Trust__r.Primary_Representative_Contact__r.MailingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Rep Mailing Street</label>
    <type>Text</type>
</CustomField>