force-app/main/default/objects/Closing__c/fields/Primary_Rep_Mailing_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_Mailing_Zip_Code__c</fullName>
    <formula>Trust__r.Primary_Representative_Contact__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Rep Mailing Zip Code</label>
    <type>Text</type>
</CustomField>