force-app/main/default/objects/Closing__c/fields/Ready_for_Closing_Review__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Closing_Review__c</fullName>
    <inlineHelpText>This date is used once all aspects of closing have been completed and ready for Deputy Director to review,</inlineHelpText>
    <label>Ready for Closing Review</label>
    <type>Date</type>
</CustomField>