force-app/main/default/objects/Closing__c/fields/Ready_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Close__c</fullName>
    <inlineHelpText>This date should be filled in for A&amp;A to close with TL</inlineHelpText>
    <label>Ready to Close</label>
    <type>Date</type>
</CustomField>