force-app/main/default/objects/Closing__c/fields/Recurring_Deposits__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Deposits__c</fullName>
    <inlineHelpText>If Yes, please contact the remitter to cease the deposits.</inlineHelpText>
    <label>Recurring Deposits</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>