force-app/main/default/objects/Closing__c/fields/Remainder_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Remainder_Sent_Date__c</fullName>
    <label>Remainder Sent Date</label>
    <type>Date</type>
</CustomField>