force-app/main/default/objects/Closing__c/fields/Rep_Payee_Fees_That_Need_to_Be_Paid__c.field-meta.xml
<CustomField>
    <fullName>Rep_Payee_Fees_That_Need_to_Be_Paid__c</fullName>
    <label>Rep Payee Fees That Need to Be Paid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>