force-app/main/default/objects/Closing__c/fields/Rep_Payee_Fees_Value__c.field-meta.xml
<CustomField>
    <fullName>Rep_Payee_Fees_Value__c</fullName>
    <label>Rep Payee Fees Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>