force-app/main/default/objects/Closing__c/fields/Retained_by_Trust_After_Death_3rd_Pty__c.field-meta.xml
<CustomField>
    <fullName>Retained_by_Trust_After_Death_3rd_Pty__c</fullName>
    <label>% Retained by Trust After Death-3rd Pty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>25%</fullName>
            </value>
            <value>
                <fullName>Other % (please specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>