force-app/main/default/objects/Closing__c/fields/Service_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Service_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Enrollment</label>
    <referenceTo>Service_Enrollment__c</referenceTo>
    <relationshipLabel>Closings</relationshipLabel>
    <relationshipName>Closings</relationshipName>
    <type>Lookup</type>
</CustomField>