force-app/main/default/objects/Closing__c/fields/Shipping_Fees__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Fees__c</fullName>
    <inlineHelpText>If any checks or TL cards have used special handling in the last month, asses fees as appropriate. (USPS Priority + Delivery Confirmation - $12, USPS Priority Mail Express or expedited TL cards - $35)</inlineHelpText>
    <label>Shipping Fees</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>