force-app/main/default/objects/Closing__c/fields/SSA_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>SSA_Letter_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SSA Letter Sent</label>
    <type>Checkbox</type>
</CustomField>