force-app/main/default/objects/Closing__c/fields/Subject_to_Audit__c.field-meta.xml
<CustomField>
    <fullName>Subject_to_Audit__c</fullName>
    <formula>TODAY() &lt; ADDMONTHS(Final_Distribution_Date__c,12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subject to Audit</label>
    <type>Checkbox</type>
</CustomField>