force-app/main/default/objects/Closing__c/fields/Supervisor_Signoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Signoff_Date__c</fullName>
    <label>Supervisor Signoff Date</label>
    <type>Date</type>
</CustomField>