force-app/main/default/objects/Closing__c/fields/Tax_Prep_Fees__c.field-meta.xml
<CustomField>
    <fullName>Tax_Prep_Fees__c</fullName>
    <label>Tax Prep Fees</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>