force-app/main/default/objects/Closing__c/fields/This_Month_s_Fees__c.field-meta.xml
<CustomField>
    <fullName>This_Month_s_Fees__c</fullName>
    <inlineHelpText>Calculated in a flow</inlineHelpText>
    <label>This Month&apos;s Fees</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>