force-app/main/default/objects/Closing__c/fields/TMHP_Amount_Owed__c.field-meta.xml
<CustomField>
    <fullName>TMHP_Amount_Owed__c</fullName>
    <label>TMHP Amount Owed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>