force-app/main/default/objects/Closing__c/fields/TMHP_Check_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>TMHP_Check_Sent_Date__c</fullName>
    <label>TMHP Check Sent Date</label>
    <type>Date</type>
</CustomField>