force-app/main/default/objects/Closing__c/fields/TMHP_Contacted_Date__c.field-meta.xml
<CustomField>
    <fullName>TMHP_Contacted_Date__c</fullName>
    <label>TMHP Contacted Date</label>
    <type>Date</type>
</CustomField>