force-app/main/default/objects/Closing__c/fields/TMHP_Reply_Recd_Date__c.field-meta.xml
<CustomField>
    <fullName>TMHP_Reply_Recd_Date__c</fullName>
    <label>TMHP Reply Recd Date</label>
    <type>Date</type>
</CustomField>