force-app/main/default/objects/Closing__c/fields/Total_Escrow_Additions__c.field-meta.xml
<CustomField>
    <fullName>Total_Escrow_Additions__c</fullName>
    <label>Total Escrow Additions</label>
    <summarizedField>Escrow_Addition__c.Amount__c</summarizedField>
    <summaryForeignKey>Escrow_Addition__c.Closing__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>