force-app/main/default/objects/Closing__c/fields/Total_Escrow_Disbursements__c.field-meta.xml
<CustomField>
    <fullName>Total_Escrow_Disbursements__c</fullName>
    <label>Total Escrow Disbursements</label>
    <summarizedField>Escrow_Disbursement__c.Amount__c</summarizedField>
    <summaryForeignKey>Escrow_Disbursement__c.Closing__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>