force-app/main/default/objects/Closing__c/fields/Total_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Fees__c</fullName>
    <formula>This_Month_s_Fees__c + Last_Month_s_Fees__c + Tax_Prep_Fees__c + Estimated_Taxes__c + Final_Accounting_Fee__c + Closing_Fee__c + Death_Verification_Fee__c + Frequent_Disbursement_Fee__c + Other_Closing_Fee__c + Shipping_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>