force-app/main/default/objects/Closing__c/fields/True_Link_Card__c.field-meta.xml
<CustomField>
    <fullName>True_Link_Card__c</fullName>
    <inlineHelpText>If yes, click &quot;Permanently Close&quot; on the Card dashboard and notify Hiwet.</inlineHelpText>
    <label>True Link Card</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>