force-app/main/default/objects/Closing__c/fields/True_Link_Card_Balance_If_applicable__c.field-meta.xml
<CustomField>
    <fullName>True_Link_Card_Balance_If_applicable__c</fullName>
    <label>True Link Card Balance (If applicable)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>