force-app/main/default/objects/Closing__c/fields/True_Link_Card_Funds_Returned_to_Trust__c.field-meta.xml
<CustomField>
    <fullName>True_Link_Card_Funds_Returned_to_Trust__c</fullName>
    <label>True Link Card Funds Returned to Trust</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>