force-app/main/default/objects/Closing__c/fields/Trust_Balance__c.field-meta.xml
<CustomField>
    <fullName>Trust_Balance__c</fullName>
    <formula>Trust__r.True_Link_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trust Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>