force-app/main/default/objects/Closing__c/fields/Trustee_Certification_Signed__c.field-meta.xml
<CustomField>
    <fullName>Trustee_Certification_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trustee Certification Signed</label>
    <type>Checkbox</type>
</CustomField>