force-app/main/default/objects/Closing__c/fields/Ultimate_Remainderperson__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Remainderperson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ultimate Remainderperson</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Closings (Ultimate Remainderperson)</relationshipLabel>
    <relationshipName>Closings2</relationshipName>
    <type>Lookup</type>
</CustomField>