force-app/main/default/objects/Closing__c/fields/Ultimate_Remainderperson_Organization__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Remainderperson_Organization__c</fullName>
    <label>Ultimate Remainderperson/Organization</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual or Charity</fullName>
            </value>
            <value>
                <fullName>Heirs at Law</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>