force-app/main/default/objects/Closing__c/fields/Unclaimed_Amount_to_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Unclaimed_Amount_to_Reserve__c</fullName>
    <label>Unclaimed Amount to Reserve</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>