force-app/main/default/objects/Closing__c/fields/X18_Digit_Closing_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Closing_ID__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit Closing ID</label>
    <type>Text</type>
</CustomField>