force-app/main/default/objects/Closing__c/recordTypes/Depletion_Resignation.recordType-meta.xml
<RecordType>
    <fullName>Depletion_Resignation</fullName>
    <active>true</active>
    <description>Depletion/Resignation</description>
    <label>Depletion/Resignation</label>
</RecordType>