force-app/main/default/objects/Closing__c/recordTypes/I_III_Death.recordType-meta.xml
<RecordType>
    <fullName>I_III_Death</fullName>
    <active>true</active>
    <description>I &amp; III Death</description>
    <label>I &amp; III Death</label>
</RecordType>