force-app/main/default/objects/Closing__c/recordTypes/II_IV_Death.recordType-meta.xml
<RecordType>
    <fullName>II_IV_Death</fullName>
    <active>true</active>
    <description>II &amp; IV Death</description>
    <label>II &amp; IV Death</label>
</RecordType>