force-app/main/default/objects/Closing__c/listViews/Active_Closings.listView-meta.xml
<ListView>
    <fullName>Active_Closings</fullName>
    <columns>NAME</columns>
    <columns>Beneficiary__c</columns>
    <columns>Trust__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Death_Certificate_Requested__c</columns>
    <columns>Status__c</columns>
    <columns>Medicaid_Claim_Amount__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Closings</label>
</ListView>