force-app/main/default/objects/Closing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Beneficiary__c</columns>
    <columns>Trust__c</columns>
    <columns>Death_Certificate_Requested__c</columns>
    <columns>Status__c</columns>
    <columns>Medicaid_Claim_Amount__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>